changed to my own custom styling for the table. Issues with the License and Logo not aligning as I would like

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -33,6 +33,18 @@ main {
   justify-content: flex-start;
 }
 
+td {
+	width: auto;
+	height: auto;
+	text-align: center;
+	vertical-align: middle;
+}
+
+tr td:last-child {
+	width: 1%;
+	white-space: nowrap;
+}
+
 .navigation {
   background-color: rgba(19, 20, 22, 0.97);
   width: 250px;
@@ -338,6 +350,35 @@ main {
 .safety-rating-text-road {
 	font-weight: bolder;
 	padding-right: 3px;
+}
+
+.series-table {
+	width: 100%;
+	height: 100%;
+}
+
+.series-table-header {
+	background-color: rgba(162, 172, 185, 0.1);
+	height: 25px;
+}
+
+.series-table-header-long {
+	text-align: left;
+}
+
+.series-table-item {
+	height: 25px;
+}
+
+.series-table-item-alt {
+	background-color: rgba(162, 172, 185, 0.1);
+}
+
+.standard-divider {
+	width: 100%;
+	height: 1px;
+	background-color: #2D2F34;
+	margin-bottom: 15px;
 }
 
 .title-with-icon {
